kubernetes/app/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiservice
  namespace: api
  labels:
    app: apiservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apiservice
  template:
      metadata:
        labels:
          app: apiservice
      spec:
        containers:
          - name: apiservice
            image: sulaiman28/api-service-test:latest
            imagePullPolicy: Never
            ports:
              - containerPort: 8080
                name: http
            livenessProbe:
              httpGet:
                path: /users
                port: 8080
              initialDelaySeconds: 60
              periodSeconds: 5
