kubernetes/app/app-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: apiservice
  namespace: api
spec:
  selector:
    app: apiservice
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
