kubernetes/app/app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: apiservice
  namespace: api
spec:
  rules:
    - host: api.local
      http:
        paths:
          - path: /
            backend:
              serviceName: apiservice
              servicePort: 8080
